--- a/style.css
+++ b/style.css
@@ -456,6 +456,23 @@ section .title::after {
     width: 80%;
 }
 
+.skills-content .right .JAVA::before {
+    width: 85%;
+}
+.skills-content .right .JSP::before {
+    width: 80%;
+}
+.skills-content .right .Hibernate::before {
+    width: 85%;
+}
+.skills-content .right .JDBC::before {
+    width: 87%;
+}
+.skills-content .right .Servlet::before {
+    width: 87%;
+}
+
+
 
 
 /* teams section styling */
@@ -816,3 +833,4 @@ footer span a:hover {
         line-height: 38px;
     }
 }
+
